<resources>
    <string name="app_name">Daffodils Psychiatry</string>
    <string name="change_pass">Change Password</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_about">About Us</string>
    <string name="title_help">Help &amp; Support</string>
    <string name="title_sample_vdo">Free Lectures</string>
    <string name="title_validity">Validity Details</string>
    <string name="title_subs_vdo">My Subscription</string>
    <string name="title_offline_vdo">Offline Videos</string>
    <string name="title_pricing">Charges</string>
    <string name ="title_courses"> Available Courses </string>
    <string name ="title_faculty">Know Your Faculty</string>
    <string name ="title_books">Our Reference Books </string>
    <string name="title_discount">Ongoing Discounts</string>
    <string name="title_mrc_psych_paperb">MRCPsych Statistics Module</string>
    <string name="title_foundation">Full Foundation Course (Old Ver.)</string>
    <string name="title_payment_details">Payment Details </string>
    <string name="title_crash">Crash Course</string>
    <string name="title_mrcPsych">MRCPsych Course</string>
    <string name="title_combinedcourse">Updated Foundation Course 2.0</string>
    <string name="title_change_pass">Change Password</string>
    <string name="title_share">Share</string>
    <string name="title_logout">Logout</string>
    <string name="title_addtocart">ADD TO CART</string>

    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_valid_email">Enter valid email address</string>
    <string name="enter_country_code">Enter country code</string>
    <string name="enter_mobile_no">Enter mobile number</string>
    <string name="enter_pg_det">Enter year of PG</string>
    <string name="enter_college">Enter college name</string>
    <string name="enter_pursuing">Enter Pursuing DPM/MD/DNB ?</string>
    <string name="enter_valid_mobile_no">Enter valid mobile number</string>
    <string name="enter_pass">Enter password</string>
    <string name="enter_old_pass">Enter old password</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="enter_confirm_pass">Enter Confirm password</string>
    <string name="no_match_old_pass">Old password not matched</string>
    <string name="pass_not_match">Password not matched</string>
    <string name="title_shivali">Dr Shivali Aggarwal</string>
    <string name="title_mohit">Dr Mohit Sharma</string>
    <string name="is_login">Welcome Guest !</string>
    <string name="share_via">Share via</string>
    <string name="take_a_look">Take a Look at&#160;</string>
    <string name="exit_msg">Please click BACK again to exit</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!--Firebase AUTH -->
    <string name="phone_number">Phone Number</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="otp_receive_alert">Not received OTP resend and try</string>
    <string name="otp_resend_alert">An OTP (One-Time-Password) has been sent to your registered mobile number.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_sign_in">Verify and Sign In</string>
    <string name="sign_out">sign out</string>
    <string name="mobile_send_msg">We will send you an OTP on this mobile number to verify. </string>
    <string name="paypal">PayPal</string>
    <string name="resend">Resend</string>
    <string name="resend_cap">RE-SEND</string>
    <string name="not_receive_msg">Don\'t receive verify otp ?</string>
    <string name="verify_message">Verify your registered number and reset your password. </string>
    <string name="alert_register_num1">Mobile number is not registered on&#160;</string>
    <string name="alert_register_num2">. Please register to continue. Return to Log In screen and select Sign Up.</string>
    <string name="verify_alert_1">Mobile number already registered with&#160;</string>
    <string name="verify_alert_2">. You can sign into account using your credentials.</string>
    <string name="reset_alert_msg">Are you sure, you want to reset password?</string>
    <string name="msg_forget_otp">OTP sent to this mobile number</string>
    <string name="verify_your_mobile">Verify Your Mobile </string>
    <string name="mobile">Mobile No</string>
    <string name="next">Next</string>
    <string name="otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="please_type_verification_code_sent_to">Please Enter OTP sent via SMS on</string>

    <!--Pricing Plans -->
    <string name="full_found_course">FULL FOUNDATION COURSE (Old Ver.)</string>
    <string name="crash_course">CRASH COURSE</string>

    <string name="mod1"> <u>MODULE 1</u></string>
    <string name="mod2"> <u>MODULE 2</u></string>
    <string name="mod3"> <u>MODULE 3</u></string>
    <string name="mod4"> <u>MODULE 4</u></string>
    <string name="mod5"> <u>MODULE 5</u></string>
    <string name="mod6"> <u>MODULE 6</u></string>
    <string name="mod7"> <u>MODULE 7</u></string>
    <string name="mod8"> <u>MODULE 8</u></string>
    <string name="mod9"> <u>MODULE 9</u></string>
    <string name="mod10"><u>MODULE 10</u></string>
    <string name="mod11"><u>MODULE 11</u></string>

    <string name="mod_1">CHILD PSYCHIATRY</string>
    <string name="mod_2">ADULT PSYCHIATRY (PART-1)</string>
    <string name="mod_3">ADULT PSYCHIATRY (PART-2)</string>
    <string name="mod_4">FORENSIC &amp; COMMUNITY PSYCHIATRY</string>
    <string name="mod_5">SUBSTANCE USE DISORDER</string>
    <string name="mod_6">PSYCHOLOGY</string>
    <string name="mod_7">NEUROPSYCHIATRY &amp; NEUROANATOMY</string>
    <string name="mod_8">CLINICAL CASE DISCUSSION (CCD)</string>
    <string name="mod_9">PSYCHOPHARMACOLOGY</string>
    <string name="paper1">PAPER 1</string>
    <string name="paper2">PAPER 2</string>
    <string name="paper3">PAPER 3</string>
    <string name="paper4">PAPER 4</string>
    <string name="paperb">PAPER B</string>
    <string name= "combined_mod">Combined Adult Psychiatry (Part 1 &amp; Part 2)</string>

    <string name="full_price">Rs 12,000</string>
    <string name="mod1_price">Rs 3500</string>
    <string name="mod2_price">Rs 5000</string>
    <string name="mod3_price">Rs 2500</string>
    <string name="mod4_price">Rs 2500</string>
    <string name="mod5_price">Rs 2500</string>
    <string name="mod6_price">Rs 3500</string>
    <string name="mod7_price">Rs 2500</string>
    <string name="mod8_price">Rs 5000</string>
    <string name="mod9_price">Rs 5000</string>
    <string name="combined_mod_price">Rs 7000</string>

    <string name="book1">Comprehensive Textbook of Psychiatry (CTP)</string>
    <string name="book2">Synopsis - Kaplan &amp; Saddock</string>
    <string name="book3">Maudsley - Prescribing guidelines in Psychiatry</string>
    <string name="book4">Stahls Essential PSYCHOPHARMACOLOGY</string>
    <string name="book5">Oxford Textbook of Psychiatry</string>
    <string name="book6">Lishmans Organic Psychiatry</string>
    <string name="book7">Baron Psychology</string>
    <string name="book8">King and Morgan Psychology</string>
    <string name="book9">Nambi &amp; Jileha - Forensic Psychiatry</string>
    <string name="book10">Guidelines - APA, NICE </string>
    <string name="book12">Latest articles and many others</string>
    <string name="book11">DSM-5, ICD- 10, 11</string>
    <string name="book13">Rutters Child Psychiatry</string>
    <string name="book14">Substance Use disorder by Dr Rakesh Lal</string>
    <string name="book15">Clinical practice guidelines on Newer and Emerging Addictive Disorders in India by Indian Psychiatric Society</string>

    <string name="confirm_order_amt">Confirm Order Amount</string>
    <string name="order_placed1">Order Placed</string>
    <string name="success_order">Your order has been successfully placed !</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="summary">View All Orders</string>
    <string name="cart">Cart Details</string>
    <string name="payment">Payment</string>
    <string name="promo_code_msg">Have a Promo Code ?</string>
    <string name="apply">APPLY</string>
    <string name="promo_code">Promo Code</string>
    <string name="order_list">Order Summary</string>
    <string name="course_name">Course Name</string>
    <string name="modulename">Module Name</string>
    <string name="price">Price</string>
    <string name="action">Del</string>
    <string name="sub_total">Sub Total</string>
    <string name="tran_fees">Transactional Charges</string>
    <string name="promo_discount">Promo Discount</string>
    <string name="final_amt">Final Amount</string>
    <string name="total_amt">Total Amount</string>
    <string name="btnProceed">Proceed</string>

    <string name="noitem_incart">Your cart is empty</string>
    <string name="noitem_incart_msg">You have no items in your shopping cart.\nLets\'s go buy something!</string>
    <string name="shop_now">Shop Now</string>
    <string name="gotocart">GO TO CART</string>


</resources>