<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/menu_courses"
        android:icon="@drawable/courses"
        android:title="@string/title_courses" />
    <item
        android:id="@+id/menu_sample_vdo"
        android:icon="@drawable/ic_video"
        android:title="@string/title_sample_vdo" />
    <item
        android:id="@+id/menu_subs_vdo"
        android:icon="@drawable/ic_subs_vdo"
        android:title="@string/title_subs_vdo"/>
    <item
        android:id="@+id/menu_offline_vdo"
        android:icon="@drawable/ic_subs_vdo"
        android:title="@string/title_offline_vdo"/>
    <item
        android:id="@+id/menu_faculty"
        android:icon="@drawable/ic_faculty"
        android:title="@string/title_faculty"/>
    <item
        android:id="@+id/menu_books"
        android:icon="@drawable/ic_book"
        android:title="@string/title_books"/>
    <item
        android:id="@+id/menu_pricing"
        android:icon="@drawable/ic_pricing"
        android:title="@string/title_pricing"/>

    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"/>
    <item
        android:id="@+id/menu_Profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"/>
    <item
        android:id="@+id/menu_Validity"
        android:icon="@drawable/ic_validity"
        android:title="@string/title_validity"/>
    <item
        android:id="@+id/menu_AboutUs"
        android:icon="@drawable/ic_about"
        android:title="@string/title_about"/>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">


        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_support"
            android:title="@string/title_help" />
        <item
            android:id="@+id/menu_changepass"
            android:icon="@drawable/ic_changepass"
            android:title="@string/change_pass" />
        <item
            android:id="@+id/menu_share"
            android:icon="@drawable/ic_share"
            android:title="Share App" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="Logout" />
    </group>

</menu>