
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_shadow_light"
        android:padding="@dimen/margin_5dp"
        android:weightSum="3">

        <TextView
            android:background="@color/logocolor"
            android:text="@string/full_found_course"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="@dimen/margin_5dp"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:text="@string/full_price"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/margin_5dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </TableRow>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/mod_1"
                android:textColor="@color/txt_color"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Topics"
                android:id="@+id/mod1_topic"
                android:paddingBottom="5dp"
                android:textColor="@color/darkgray"
                android:textStyle="normal"
                android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:background="@color/green"
                    android:text="@string/mod1_price"
                    android:padding="@dimen/margin_5dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="19dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/mod_2"
                android:textColor="@color/txt_color"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Topics"
                android:id="@+id/mod2_topic"
                android:paddingBottom="5dp"
                android:textColor="@color/darkgray"
                android:textStyle="normal"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@color/green"
                android:text="@string/mod2_price"
                android:padding="@dimen/margin_5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="19dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/mod_3"
                android:textColor="@color/txt_color"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Topics"
                android:id="@+id/mod3_topic"
                android:paddingBottom="5dp"
                android:textColor="@color/darkgray"
                android:textStyle="normal"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@color/green"
                android:text="@string/mod3_price"
                android:padding="@dimen/margin_5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="19dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/mod_4"
                android:textColor="@color/txt_color"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Topics"
                android:id="@+id/mod4_topic"
                android:paddingBottom="5dp"
                android:textColor="@color/darkgray"
                android:textStyle="normal"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@color/green"
                android:text="@string/mod4_price"
                android:padding="@dimen/margin_5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="19dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/mod_5"
                android:textColor="@color/txt_color"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Topics"
                android:id="@+id/mod5_topic"
                android:paddingBottom="5dp"
                android:textColor="@color/darkgray"
                android:textStyle="normal"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@color/green"
                android:text="@string/mod5_price"
                android:padding="@dimen/margin_5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="19dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/mod_6"
                android:textColor="@color/txt_color"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Topics"
                android:id="@+id/mod6_topic"
                android:paddingBottom="5dp"
                android:textColor="@color/darkgray"
                android:textStyle="normal"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@color/green"
                android:text="@string/mod6_price"
                android:padding="@dimen/margin_5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="19dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/mod_7"
                android:textColor="@color/txt_color"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Topics"
                android:id="@+id/mod7_topic"
                android:paddingBottom="5dp"
                android:textColor="@color/darkgray"
                android:textStyle="normal"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@color/green"
                android:text="@string/mod7_price"
                android:padding="@dimen/margin_5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="19dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/mod_8"
                android:textColor="@color/txt_color"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Topics"
                android:id="@+id/mod8_topic"
                android:paddingBottom="5dp"
                android:textColor="@color/darkgray"
                android:textStyle="normal"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@color/green"
                android:text="@string/mod8_price"
                android:padding="@dimen/margin_5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="19dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/mod_9"
                android:textColor="@color/txt_color"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Topics"
                android:id="@+id/mod9_topic"
                android:paddingBottom="5dp"
                android:textColor="@color/darkgray"
                android:textStyle="normal"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@color/green"
                android:text="@string/mod9_price"
                android:padding="@dimen/margin_5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="19dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</TableLayout>



</ScrollView>