<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_color"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvCourseName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/course_name"
            android:textAlignment="viewStart"
            android:textColor="@color/logocolor" />

        <TextView
            android:id="@+id/tvModName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/modulename"
            android:textAlignment="center"
            android:textColor="@color/logocolor" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/price"
            android:textAlignment="center"
            android:textColor="@color/logocolor" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@drawable/ic_delete"
            android:textAlignment="viewEnd"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>